<resources>
  <string name="dev_conn_btn">Connect</string>
  <string name="bt_disconn_msg">Disconnect</string>
  <string name="bt_stop_search_btn">Stop</string>
  <string name="dev_disconn_btn">Stop</string>
  <string name="butter_pecan">BUTTER PECAN</string>
  <string name="OnAccount">On Account</string>
  <string name="print_msg">How do you want to Print?</string>
  <string name="pending_invoice_exceed_error">Your credit limit has been exceeded, please modify order.</string>
  <string name="bt_conn_msg">Search</string>
  <string name="bt_conn_fail_msg">Unable to connect</string>
  <string name="dev_check_msg">Search</string>
  <string name="search_by_customer_code_or_name">Search by CustomerCode/Name</string>
  <string name="no_activity">No Activity assigned to this customer. Contact your supervisor for further assistance.</string>
  <string name="transaction_code">Transaction Code</string>
  <string name="unload_qty">Unload\nQty</string>
  <string name="return_">Good Condition</string>
  <string name="capture_image">Capture Image</string>
  <string name="capture_video">Capture Video</string>
  <string name="record_audio">Record Audio</string>
  <string name="approved">Approved</string>
  <string name="pending">Pending</string>
  <string name="pendingCaps">PENDING</string>
  <string name="approvedCaps">APPROVED</string>
  <string name="collectedCaps">COLLECTED</string>
  <string name="rejectedCaps">REJECTED</string>
  <string name="Below_Items">Below Items are not in Min-Max Range</string>
  <string name="please_change">please change the quantities to continue.</string>
  <string name="quantity_tiems">Following items quantity is more than van quantity</string>
  <string name="deliveredCaps">DELIVERED</string>
  <string name="processedCaps">PROCESSED</string>
  <string name="Cash">Cash</string>
  <string name="edit_item">Edit Item</string>
  <string name="itemCode_decriptin">Item Code &amp; Description</string>
  <string name="date_time_caps">DATE &amp; TIME</string>
  <string name="request_has_been_processed">Request has been processed.</string>
  <string name="request_has_been_failed_in_sap">Request has been failed in SAP.</string>
  <string name="enter_warehouse_user_name">Warehouse Username</string>
  <string name="enter_customer_asset_name">Customer Name</string>
  <string name="Cheque">Cheque</string>
  <string name="Cash1">Cash</string>
  <string name="Add_Request">Add Request</string>
  <string name="Settled_Amount">Settled Amount</string>
  <string name="bt_search_btn">Search</string>
    <string name="Header_Name">Header Name</string>
    <string name="Sort_By">Sort By</string>
    <string name="Search_Map">Search Map</string>
    <string name="Map_Key">0XtNuaSZd01YG7_5LCSxiasOTBj_iLjlwUfIRdg</string>
    <string name="Map_Key_v2">AIzaSyDmInDHSC66TtIk_UJPq6HSpc84LGFTYKI</string>
    <string name="hello">Hello World, CustomisedPresellerActivity!</string>
    <string name="app_name">Baskin Robbins SFA</string>
    <string name="version_code">10</string>
    <string name="version">Baskin Robbins SFA® Version: 01.16.0216.1</string>
    <string name="release_Date">Release Date : 24 APR 2018</string>
    <string name="app_name_ver_live">BRSFA Live  3.9</string>
  <string name="app_name_ver_test">BRSFA Test  3.9</string>
    <string name="version_No">BRSFA 3.8</string>
    <string name="release_date">23 APR 2018</string>
    <string name="member">Member</string>
    <string name="login">Login</string>
    <string name="vehicle_code_hint">Enter SalesmanCode</string>
    <string name="passcode_hint">Enter PassCode</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username_hint">Username</string>
    <string name="Memeber_Login">Memeber Login</string>
    <string name="Password_hint">Password</string>
    <string name="Passcode_hint">Passcode</string>
    <string name="Remember_me">Remember me</string>
    <string name="validating_please_wait">Validating. Please wait ...</string>
    <string name="Capturing_please_wait">Capturing location. Please wait ...</string>
    <string name="itemcodenddesc">ItemCode &amp; Description</string>
    <string name="OK">OK</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Submit">Submit</string>
    <string name="check_out">Check Out</string>
    <string name="cancel">Cancel</string>
    <string name="Skip">Skip</string>
    <string name="Customer_Code">Customer Code</string>
    <string name="Address_Information">Address Information</string>
    <string name="Post_Box_No">Post Box No</string>
    <string name="Address1_Label">Street</string>
    <string name="Address2_Label">Building</string>
    <string name="Street_Building">Street/Building</string>
    <string name="Contact_Person">Contact Person</string>
    <string name="Payment_Type">Payment Type</string>
    <string name="Emirates">Emirates</string>
    <string name="Location">Location</string>
    <string name="City">City</string>
    <string name="Telephone">Telephone</string>
    <string name="Email_ID">Email ID</string>
    <string name="ItemInvoiceNum">Invoice Number</string>
    <string name="Mandatory_documents">Mandatory documents :-</string>
    <string name="Trade_license_copy">Trade license copy</string>
    <string name="Owner_passport_copy">Owner passport copy</string>
    <string name="Month_Bank_statement">3 Month Bank statement</string>
    <string name="Registratio_Form">Registration Form</string>
    <string name="Customer_Name">Customer Name: </string>
    <string name="Fax_No">Fax No</string>
    <string name="Site_Code">Site Code</string>
    <string name="Contact_Person_and_phone">Contact Person Mobile Number</string>
    <string name="Credit_Limit">Credit Limit: </string>
    <string name="Geo_Code_X_Lat">Geo Code X </string>
    <string name="Geo_Code_Y_Long">Geo Code Y </string>
    <string name="Print">Print</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="warning">Warning !</string>
    <string name="confirmation">confirmation</string>
    <string name="Reset_Done">Stock reset done successfully.</string>
    <string name="Stock_not_available">Stock is not available</string>
    <string name="pricing_list_is_not_available">Pricing list is not available</string>
    <string name="no_connectivity">No Connectivity !</string>
    <string name="loading">Loading ...</string>
    <string name="loading_stock">Loading Stock...</string>
    <string name="error_occured_while_verification">Error occurred while verifying. Please try again.</string>
    <string name="please_wait">Please wait ...</string>
    <string name="pls_enter_passcode">Please enter passcode.</string>
    <string name="enter_valid_passcode">Please enter a valid passcode.</string>
    <string name="passcode_dialog">PassCode Dialog</string>
    <string name="No_matching_record_found">No matching record found.</string>
    <string name="please_sign_before_submit">Please sign before submitting the stock verification.</string>
    <string name="enter_password">Please enter password.</string>
    <string name="select_orderItems_first">Please select order items first.</string>
    <string name="you_are_not_authorized_to_login">You are not authorized to login.</string>
    <string name="enter_username_password">Please enter user code and password.</string>
    <string name="sync_pending_invoices">Syncing Pending Invoices.</string>
    <string name="enter_username">Please enter user code.</string>
    <string name="Payment_Confirm">  Payment Confirm  </string>
    <string name="Discount_in_percentage">Discount (in %)</string>
    <string name="Total_value">Invoice Price:</string>
    <string name="Empty_Jar_value">EmptyJar value (AED):</string>
    <string name="Order_value">Order Value:</string>
    <string name="Price">Price</string>
    <string name="AddItem">Add Item</string>
    <string name="Finalize"> &#032;&#032;Finalize&#032;&#032;</string>
    <string name="Capture_Inventory">Capture Order</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="No_previous_order">Please add items</string>
    <string name="itemcode">Item Code &amp; Description</string>
    <string name="Cases">Cases</string>
    <string name="Gate_Pass_QTY">Gatepass (Cases)</string>
    <string name="Gate_Pass_QTY_p">Gatepass (Units)</string>
    <string name="check_in_demand">Check in Demand</string>
    <string name="Units">Units</string>
    <string name="Empty_Jar">E.Jar</string>
    <string name="Add_New_SKU_Item">Add Items</string>
    <string name="Item_Desc">Item Desc</string>
    <string name="Category">Category</string>
    <string name="Search">Search</string>
    <string name="Item_Code">Item Code</string>
    <string name="Item_Description">Item Description</string>
    <string name="No_item_found">No item found</string>
    <string name="Add">Add</string>
    <string name="Preview_Order">Preview Order</string>
    <string name="Invoice_Preview">Invoice Preview</string>
    <string name="Sales_Qty">Sales Qty</string>
    <string name="Returns_Qty">Returns Qty</string>
    <string name="Damaged_Qty">Damaged Qty</string>
    <string name="Exchanges_Qty">Exchanges Qty</string>
    <string name="Free_Items_Qty">Free Items Qty</string>
    <string name="Return_Free_Items">Return Free Items</string>
    <string name="PO_CRM_Order">PO / CRM Order</string>
    <string name="Remarks">Remarks</string>
    <string name="ReturnReason1">Expired</string>
    <string name="ReturnReason2">Soon To Expire</string>
    <string name="ReturnReason3">Damaged</string>
    <string name="Confirm_Order">  Confirm Order  </string>
    <string name="Save_as_Draft"> Save as Draft </string>
    <string name="Discount_if_any_inpercentage">Discount if any (%)</string>
    <string name="Print_Customer_Copy">Customer Copy </string>
    <string name="Print_Merchant_Copy">Merchant Copy </string>
    <string name="Print_Merchant">Merchant Copy</string>
    <string name="Print_Customer">Customer Copy</string>
    <string name="Customer_History">Customer History</string>
    <string name="Next">Next</string>
    <string name="Continue">&#032;Continue&#032;</string>
    <string name="Total_Amt">Total Amt</string>
    <string name="baskin_robbin_title">Galadari Brothers Co. L.L.C.</string>
    <string name="baskin_robbin_address">215/18 Street, Umm Ramool\nRashidiya Industrial Area\nP. O. Box 10759, Dubai, UAE\nTel: 04-605 7000 Fax: 04-286 0863</string>
  <string name="baskin_robbin_address_SAR">P.B.1401. Dammam-31431, K.S.A\nTel: +966 3 8343410-Ext 2505,\nFax 1: +966 3 8092563 (Direct),\nFax 2: +966 3 8350019 (General),\nMob:+966 565170378</string>
    <string name="Discount">Discount</string>
    <string name="Customer_Signature">Customer Signature</string>
    <string name="Preseller_Signature">Salesman Signature</string>
    <string name="Total">Total</string>
    <string name="Customer_Passcode">Customer Passcode:</string>
    <string name="Delivery_Date">Delivery Date:</string>
    <string name="Delivery_Time">Delivery Time:</string>
    <string name="Delivery_Window">Delivery Window:</string>
    <string name="Signature">Signature :</string>
    <string name="Clear">Clear</string>
    <string name="validating_your_credit_limit">Validating your credit limit ...</string>
    <string name="please_wait_order_pushing">Please wait, while your order is pushing to server...</string>
    <string name="exceeded_your_credit_limit_tele_order">You exceeded your credit limit.</string>
</resources>