<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/svScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <include layout="@layout/free_delivery_item_header" />

            <LinearLayout
                android:id="@+id/llLayoutMiddle"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llTotalValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/btnAddIetem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="2dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/btn_verify_click"
            android:text="@string/AddItem"
            android:textColor="@color/white"
            android:visibility="gone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@drawable/dot_seperator" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:layout_marginTop="2dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvDisHeader"
                android:layout_width="105dip"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/Discount_in_percentage"
                android:textColor="@color/list_title"
                android:textSize="16dip"
                android:visibility="visible" />

            <TextView
                android:id="@+id/etDiscValue"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="@color/list_middle"
                android:textSize="16dip"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvHeaderText"
                android:layout_width="110dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:singleLine="true"
                android:text="@string/Total_value"
                android:textColor="@color/list_title"
                android:textSize="15dip" />

            <TextView
                android:id="@+id/evTotalValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dip"
                android:layout_weight="1"
                android:gravity="right"
                android:inputType="number"
                android:padding="1dip"
                android:singleLine="true"
                android:textColor="@color/list_middle"
                android:textSize="15dip" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottomButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/basefooter"
        android:gravity="right" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/sep_base" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/icon5"
                android:gravity="center_vertical"
                android:text="@string/Submit"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/icon3"
                android:gravity="center_vertical"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnReturnRequestPayment"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight=".70"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/confirm"
                android:drawablePadding="5dip"
                android:paddingRight="7dip"
                android:text="@string/Payment_Confirm"
                android:textColor="@color/white"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llReturnSave"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@drawable/basefooter"
        android:gravity="right"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/sep_base" />

        <Button
            android:id="@+id/btnAddItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/add"
            android:drawableRight="@drawable/sep_base"
            android:gravity="center_vertical"
            android:text="Add Items "
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/icon3"
            android:gravity="center_vertical"
            android:text="Cancel "
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnFinalize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/icon5"
            android:gravity="center_vertical"
            android:text="Finalize "
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>