<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/pop"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/tvSing"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:text="Shipping staff M-Signature"
        android:textColor="#03515E"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/dot_seperator"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Store Keeper Signature"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnSKCear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="5dp"
                android:background="@drawable/empty_rounded_button_click"
                android:text="@string/Clear"
                android:textColor="#ffffff"
                android:textSize="16dip"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSignSupervisor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:orientation="horizontal"
            android:padding="2dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:gravity="center_vertical" >

            <TextView android:id="@+id/tvSalesmansign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Salesman Signature"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnDriverCear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="5dp"
                android:background="@drawable/empty_rounded_button_click"
                android:text="@string/Clear"
                android:textColor="#ffffff"
                android:textSize="16dip"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSignDriver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:orientation="horizontal"
            android:padding="2dip" />

          <EditText
              android:id="@+id/etPassCode"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dip"
              android:background="@drawable/inputblue"
              android:hint="@string/Passcode_hint"
              android:imeOptions="actionDone"
              android:inputType="textPassword"
              android:paddingLeft="10dip"
              android:singleLine="true"
              android:textColor="@color/blue"
              android:textColorHint="@color/ash_gry"
              android:textSize="14dip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:background="@drawable/empty_rounded_button_click"
            android:text="@string/Submit"
            android:textColor="#ffffff"
            android:textSize="16dip"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>